# ddd-practice

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
db/docs/: ER.a5er
db/init/: 0_create_tables.sql
diagrams/: class.puml
example/: fullname.py  money.py  test_money.py  transport_service.py
migrations/versions/: 03716aa34ddf_alter_a_column.py  1bebc4a140ca_create_account_table.py  b96ce8555b51_create_account_table.py
src/: .gitignore  circle.py  circle_application_service.py  circle_domain_service.py  fullname.py  icircle_factory.py  icircle_repository.py  iuser_factory.py  iuser_repository.py  mail_address.py  main.py  user.py  user_domain_service.py  user_factory.py  user_repository.py  user_service.py
src/application/: user_data.py  user_delete_service.py  user_get_info_service.py  user_register_service.py  user_update_info_service.py
src/application/group/: group_create_service.py  group_join_service.py
src/application/user/: user_data.py  user_delete_service.py  user_get_info_service.py  user_register_service.py  user_update_info_service.py
src/diagrams/: class.puml
src/domain/models/group/: group.py  group_full_specification.py  igroup_factory.py  igroup_repository.py
src/domain/models/user/: iuser_factory.py  iuser_repository.py  user.py
src/domain/services/: group_domain_service.py  user_domain_service.py
src/infrastructure/mock/user/: user_mock_repository.py
tests/: conftest.py  test_fullname.py  test_money.py  test_user.py
tests/application/user/: test_user_register.py
(+2 files in other folders)
