[tool.poetry]
name = "ddd-book"
description = "ドメイン駆動設計入門のPython版"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
# addopts = "--cov --cov-branch -s -v"
addopts = "-v"
testpaths = [
    "tests",
]
