[tool.poetry]
name = "ddd-practice"
description = "ドメイン駆動設計入門のPython版"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
injector = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.2"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.3"


[tool.poetry.group.migration.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-s -v --cov=src --cov-branch --cov-report html"
# addopts = "-v --cov-branch"
testpaths = [
    "tests",
]
